--- a/src/main/resources/templates/admin/block-list.html
+++ b/src/main/resources/templates/admin/block-list.html
@@ -8,64 +8,10 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/adminlist.css}">
+
     <title>Admin</title>
-    <style>
-        a:hover {
-            font-weight: bold;
-        }
-        .pagination {
-            width: 1000px;
-            display: flex;
-        }
-
-        .page-item .page-link {
-            color: #000; /* 기본 색상 */
-            background-color: #fff;
-            border: 1px solid #67cafe;
-        }
-
-        .page-item .page-link:hover {
-            background-color: #E8FFFF;
-        }
-
-        .page-item.active .page-link {
-            background-color: #67cafe; /* 활성화된 버튼 배경색 */
-            color: #fff; /* 활성화된 버튼 텍스트 색상 */
-        }
-
-        .countPost1 {
-            background-color: #E8FFFF;
-            border: 1px solid #d5d5d5;
-            border-radius: 0.5rem 0 0 0.5rem ;
-            height: 43px;
-            padding: 10px;
-            align-items: center;
-
-        }
-
-        .countPost2 {
-            background-color: #E8FFFF;
-            border: 1px solid #d5d5d5;
-            border-left: white;
-            border-radius: 0;
-            height: 43px;
-            padding: 10px;
-            align-items: center;
-
-        }
-
-        .countPost3 {
-            background-color: #E8FFFF;
-            border: 1px solid #d5d5d5;
-            border-left: white;
-            border-radius: 0 0.5rem 0.5rem 0;
-            height: 43px;
-            padding: 10px;
-            align-items: center;
-
-        }
-
-    </style>
+    <
 </head>
 <body>
 <div th:include="include/header :: header"></div>
@@ -92,25 +38,25 @@
                                 <!--전체회원, 신고목록, 차단회원 이동메뉴-->
                                 <div class="d-flex flex-row justify-content-around" style="width: 65%">
                                     <a href="user-list"
-                                       class="btn btn-outline-secondary align-items-center countPost1"
-                                       type="button" style="width: 40%">
+                                       class="btn btn-outline-secondary align-items-center user-list"
+                                       type="button">
                                         전체 회원
                                     </a>
 
                                     <a href="report-list"
-                                       class="btn btn-outline-secondary align-items-center countPost2"
-                                       type="button" style="width: 40%">
+                                       class="btn btn-outline-secondary align-items-center report-list"
+                                       type="button" >
                                         신고 목록
                                     </a>
 
                                     <a href="block-list"
-                                       class="btn btn-outline-secondary align-items-center countPost3"
-                                       type="button" style="width: 40%; background-color: #67cafe; color: white">
+                                       class="btn btn-outline-secondary align-items-center block-list-active"
+                                       type="button">
                                         차단 회원
                                     </a>
                                 </div>
 
-                                <!-- 검색 폼 추가 -->
+                                <!--검색기능-->
                                 <form class="d-flex input-group justify-content-end" style="width: 30%;" method="get"
                                       action="/admin/block-list">
                                     <input type="text" class="form-control" name="keyword" placeholder="검색어 입력"
@@ -173,7 +119,7 @@
                             <ul class="pagination justify-content-center">
 
                                 <!-- 이전 -->
-                                <li class="page-item" th:if="${!pageResponse.prev}">
+                                <li class="page-item" th:if="${pageResponse.prev}">
                                     <a class="page-link"
                                        th:href="@{/admin/block-list(page=${pageResponse.page - 1}, size=${pageResponse.size}, keyword=${searchKeyword})}"
                                        aria-label="Previous">
@@ -194,9 +140,9 @@
                                 </th:block>
 
                                 <!-- 다음 -->
-                                <li class="page-item" th:if="${!pageResponse.next}">
+                                <li class="page-item" th:if="${pageResponse.next}">
                                     <a class="page-link"
-                                       th:href="@{/admin/block-list(page=${pageResponse.page + 1}, size=${pageResponse.size}, keyword=${searchKeyword})}"
+                                       th:href="@{/admin/blcok-list(page=${pageResponse.page + 1}, size=${pageResponse.size}, keyword=${searchKeyword})}"
                                        aria-label="Next">
                                         <i class="bi bi-caret-right-fill" aria-hidden="true"></i>
                                     </a>
@@ -226,6 +172,12 @@
     /*차단해제*/
     async function restoreUser(userId) {
         try {
+            const isConfirmed = confirm(`차단을 해제하시겠습니까?`);
+
+            if (!isConfirmed) {
+                return; // 사용자가 취소를 누르면 함수 종료
+            }
+
             const response = await fetch(`/admin/restoreUser/${userId}`, {
                 method: 'POST',
                 headers: {
@@ -233,7 +185,7 @@
                 }
             });
             if (response.ok) {
-                alert(`유저아이디 : ${userId} 복구 되었습니다.`);
+                alert(`유저아이디 : ${userId} 차단 해제 되었습니다.`);
                 location.reload(); // 페이지 새로 고침
             } else {
                 alert('Failed to restore user.');
