--- a/src/main/resources/templates/admin/report-detail.html
+++ b/src/main/resources/templates/admin/report-detail.html
@@ -9,61 +9,11 @@
 
     <link rel="stylesheet" th:href="@{/css/styles.css}">
     <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/reportDetail.css}">
+
     <link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
     <title>Report Detail</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden; /* 가로 스크롤바 제거 */
-            overflow-y: hidden;
-            display: flex;
-            align-items: flex-start;
-            resize: none;
-        }
 
-        .report-detail {
-            padding: 20px;
-            width: 500px;
-            margin-top: 0px;
-            box-sizing: border-box; /* 패딩 포함 너비 계산 */
-        }
-
-        .header-top {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .details, .content {
-            margin-bottom: 20px;
-        }
-
-        .details div {
-            margin-bottom: 5px;
-        }
-
-        .report-title, .report-content {
-            margin-bottom: 10px;
-        }
-
-        .delete-report {
-            text-align: right;
-            cursor: pointer;
-            color: red;
-            text-decoration: underline;
-        }
-
-        .delete-button-container {
-            display: flex;
-            justify-content: flex-end;
-            margin-bottom: 20px;
-        }
-
-        #reportContent {
-            resize: none;
-        }
-    </style>
 
 </head>
 <body>
@@ -130,7 +80,7 @@
         <!--신고내용-->
         <div class="report-content">
             <label for="reportContent" class="form-label">신고 내용</label>
-            <textarea id="reportContent" class="form-control" rows="4" readonly
+            <textarea id="reportContent" class="form-control" rows="6" readonly
                       th:text="${reportDetail.reportContent}"></textarea>
         </div>
 
