User : 로그인 한 유저의 exp값이 2999라면 +1 증가되도록 변경 UserController : 회원가입 후 메세지 뷰로 날림 login.html : addFlashAttribute 로 환영메세지 alert CustomAccessDeniedHandler : 권한이 안맞는 사람이 접근할경우 시큐리티에서 잡도록 만들었음 CustomSecurityConfig : 요기서 CustomAccessDeniedHandler 를 잡도록 설정 CustomErrorController : 여기서 모든 에러를 잡아 에러페이지로 넘김 accessDenied.html : 에러페이지 accessDenied.css : 에러페이지 css 7/26_seulgi

--- a/src/main/resources/templates/my/user-modify.html
+++ b/src/main/resources/templates/my/user-modify.html
@@ -129,7 +129,7 @@
                         <div id="telFeedback" class="feedback"></div>
                     </div>
                     <input type="hidden" name="tel" id="tel" th:value="${user.tel}" required>
-                    <input type="hidden" id="userVet" name="userVet" value="false">
+                    <input type="hidden" id="userVet" name="userVet" th:value="${user.userVet}"/>
 
                     <div class="blank"></div>
 
