read페이지 리스트도 비밀글 수정 + 관리자와 수의사 권한 가진 사람도 정상적으로 보임 비밀글/수의사만 답변 가능한 글의 경우 글 작성자 본인, 관리자, 수의사 권한을 가진 회원만 댓글 작성 가능하도록 수정 join, user관련 페이지, lsit, read 버튼 클릭시 하얗게 비워지는 것  hover색으로 지정하신 색으로 전부 채워둠 게시글 수정 service단에 로그인한 유저정보 확인하는 로직 추가 경험치 3000맥스 제한 설정 헤더 푸터 좌우 사이즈 제한 설정

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -46,6 +46,9 @@ body {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .read {
@@ -141,6 +144,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .secret {
@@ -155,6 +161,10 @@ td > a {
 
 .bi-file-lock {
     font-size: 20px;
+}
+
+.bi-file-earmark-image {
+    font-size: 18px;
 }
 
 .noSearch {
@@ -190,6 +200,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: red;
     --bs-btn-hover-bg: red;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: red;
+    --bs-btn-active-bg: red;
 }
 
 .page-item .page-link {
@@ -245,6 +258,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .searchForm .searchBtn:hover {
@@ -284,6 +300,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 div.text-muted {
@@ -300,6 +319,9 @@ div.text-muted {
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .boardInfo {
