--- a/src/main/resources/static/css/include/header.css
+++ b/src/main/resources/static/css/include/header.css
@@ -3,10 +3,15 @@ header {
     padding-bottom: 10px;
 }
 
+.header {
+    max-width: 1200px;
+    margin: 0 auto; /* 중앙 정렬 */
+}
+
 .header-top {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 30px 20px 0 20px;
     background-color: #fff;
     margin-bottom: 0;
@@ -21,10 +26,12 @@ header {
 
 .log {
     font-weight: bold;
+    width: 310px;
 }
 
 .auth {
     font-size: 0.9em;
+    width: 310px;
 }
 
 .auth a {
