--- a/src/main/resources/static/css/my/userDetail.css
+++ b/src/main/resources/static/css/my/userDetail.css
@@ -5,6 +5,9 @@
     border-radius: 0.375rem;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: #67cafe;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #fff;
 }
 
 .cancel-button {
@@ -14,6 +17,9 @@
     color: #67cafe;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .modi-button:hover {
