--- a/src/main/resources/static/css/my/userModify.css
+++ b/src/main/resources/static/css/my/userModify.css
@@ -5,6 +5,9 @@
     border-radius: 0.375rem;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: #67cafe;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #ffff;
 }
 
 .cancel-button {
@@ -14,6 +17,9 @@
     color: #67cafe;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .certification-button {
@@ -23,6 +29,12 @@
     border-radius: 0.375rem;
     width: 125px;
     height: 38px;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-border-color: #67cafe;
+    --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #67cafe;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #fff;
 }
 
 .certification-button:focus {
