--- a/src/main/resources/static/css/my/userRepliesActivity.css
+++ b/src/main/resources/static/css/my/userRepliesActivity.css
@@ -45,6 +45,9 @@ body {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .searchForm .searchBtn:hover {
