--- a/src/main/resources/static/css/sample/allSearch.css
+++ b/src/main/resources/static/css/sample/allSearch.css
@@ -70,6 +70,9 @@ td > a {
     --bs-btn-hover-color: #000;
     --bs-btn-hover-border-color: #67cafe;
     --bs-btn-hover-bg: #67cafe;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .noSearch {
