--- a/src/main/resources/static/css/user/join.css
+++ b/src/main/resources/static/css/user/join.css
@@ -5,6 +5,9 @@
     border-radius: 0.375rem;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #67cafe;
 }
 
 .cancel-button {
@@ -14,6 +17,9 @@
     color: #67cafe;
     width: 150px;
     height: 38px;
+    --bs-btn-active-color: white;
+    --bs-btn-active-border-color: red;
+    --bs-btn-active-bg: red;
 }
 
 .certification-button {
@@ -23,6 +29,9 @@
     border-radius: 0.375rem;
     width: 125px;
     height: 38px;
+    --bs-btn-active-color: #67cafe;
+    --bs-btn-active-border-color: #67cafe;
+    --bs-btn-active-bg: #fff;
 }
 
 .certification-button:focus {
